--- a/esp/data/css.css
+++ b/esp/data/css.css
@@ -1,4 +1,5 @@
 body {
+  margin:0px;
   color: #434343;
   font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   font-size: 22px;
@@ -7,11 +8,6 @@ body {
 .container {
   margin: 0 auto;
   max-width: 400px;
-}
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 form .field-group {
   box-sizing: border-box;
@@ -45,6 +41,20 @@ input[type=text]:focus {
   border-color: #4C669F;
   outline: 0;
 }
+/* ids */
+#logo{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 80px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#feedback{
+  margin-top: 10px;
+}
+
+/* classes */
 .btn{
   background: #f5f5f5;
   border: 1px solid #bdbdbd;
@@ -59,16 +69,6 @@ input[type=text]:focus {
   padding: 4px 10px;
   text-decoration: none;
 }
-#logo{
-  margin-bottom: 10px;
-  height: 80px;
-}
-#feedback{
-  margin-top: 10px;
-}
-.tooltip{
-
-}
 .center{
   text-align: center;
 }
@@ -81,7 +81,34 @@ input[type=text]:focus {
 .grey{
   background: grey;
 }
+.monospace{
+  font-family: 'monospace';
+}
+.mt0{
+  margin-top: 0px;
+}
+.p10{
+  padding: 10px;
+}
 .text-right{
   text-align: right;
 }
+.topnav{
+  color:white;
+  background-color: #065063;
+  min-height:50px;
+}
+.topnav a:visited{
+  color:white;
+}
 
+#toplogo{
+  position: relative;
+  left: 7px;
+  top: 7px;
+}
+.topnav p{
+  margin-left:5px;
+  line-height: 24px;
+  display: inline;
+}
