--- a/esp/data/css.css
+++ b/esp/data/css.css
@@ -48,22 +48,6 @@ input[type=text]:focus {
   outline: 0;
 }
 
-#appstatus{
-  margin-right: 10px;
-}
-.statuswrapper{
-  text-align: right;
-  padding-top:2px;
-  padding-bottom:5px;
-}
-#logo{
-  margin-top: 10px;
-  margin-bottom: 10px;
-  height: 80px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
 #feedback{
   margin-top: 10px;
 }
@@ -87,26 +71,31 @@ input[type=text]:focus {
   text-decoration: none;
 }
 
-.btn-blue{
-  background-color: #38cef3;
-  color: white;
+.bg-blue{
+ background-color: #065063 !important;
 }
-.btn-red{
-  background-color: rgb(244,67,54);
+.bg-cyan{
+  background-color: #38cef3 !important;
+  color:black;
 }
-.btn-grey{
+.bg-red{
+  background-color: rgb(244,67,54) !important;
+}
+.bg-grey{
   background: #C8E6ED;
   color: #8db2ba;
 }
-.color-red{
+.text-red{
   color: rgb(244,67,54);
 }
-
-.center{
+.text-right{
+  text-align: right;
+}
+.text-center{
   text-align: center;
 }
 .content{
-  padding: 10px 5px;
+  padding: 10px 5px 40px;
 }
 .font70{
   font-size: 70%;
@@ -117,39 +106,35 @@ input[type=text]:focus {
 .monospace{
   font-family: 'monospace';
 }
-.mt0{
+.mt20{
+  margin-top: 20px;
+}.mt0{
   margin-top: 0px;
 }
 .p10{
   padding: 10px;
 }
-.text-right{
-  text-align: right;
-}
 .topnav{
   color:white;
-  background-color: #065063;
   min-height:50px;
-  width: 100%;
   top:0;
+  width:inherit;
   bottom:auto;
   z-index: 100;
 }
+.topnav p{
+  display:inline;
+}
+
+#toplogo{
+}
+
 .sticky {
   position: sticky;
   position: -webkit-sticky;
   position: -moz-sticky;
   position: -ms-sticky;
   position: -o-sticky;
-}
-#toplogo{
-}
-.topnav a:visited{
-  color:white;
-}
-.topnav p{
-  line-height: 24px;
-  display: inline;
 }
 
 input[type=checkbox] {
@@ -170,13 +155,11 @@ input[type=range] {
   float:right;
 }
 
-#toast-wrapper{
-}
 .toast {
   background-color: green;
-  color: #fff;
+  color: #000;
   padding: 10px;
-  border: 2px solid;
+  margin: 2px 0px;
 }
 
 label{
