--- a/esp/data/css.css
+++ b/esp/data/css.css
@@ -165,3 +165,15 @@ input[type=range] {
 label{
   padding:5px 0px;
 }
+
+@media (max-width: 320px){
+  body{
+    background-color:black;
+
+  }
+  .sticky{
+    width:320px;
+    position:fixed;
+  }
+
+}
