--- a/esp/data/css.css
+++ b/esp/data/css.css
@@ -81,6 +81,9 @@ td{
   padding:10px;
   border-bottom: 1px solid #ddd;
 }
+a{
+  cursor:pointer;
+}
 
 .btn{
   border-radius: 30px;
@@ -101,7 +104,7 @@ td{
   background-color: #065063 !important;
 }
 .bg-cyan{
-  background-color: #38cef3 !important;
+  background-color: #4fc3f7 !important;
   color:white;
 }
 .bg-red{
@@ -111,11 +114,14 @@ td{
   background: #C8E6ED;
   color: #8db2ba;
 }
+.text-green{
+  color: #4caf50 !important;
+}
 .text-cyan{
-  color: #38cef3 !important;
+  color: #4fc3f7 !important;
 }
 .text-red{
-  color: rgb(244,67,54);
+  color: #ff5722;
 }
 .text-grey{
   color: #ccc;
@@ -192,7 +198,7 @@ td{
 }
 
 .toast {
-  background-color: green;
+  background-color: #4caf50;
   color: #000;
   padding: 10px;
   margin: 2px 0px;
