Only show update form on frontpage if updateNeeded

--- a/esp/build_data/css.css
+++ b/esp/build_data/css.css
@@ -103,7 +103,7 @@ a{
 .bg-blue{
   background-color: #262626 !important;
 }
-.bg-cyan{
+.bg-yellow{
   background-color: #FFC100 !important;
   color:#262626;
 }
